syntax = "proto3";

package rental;

option go_package = "github.com/Akan15/carrental3/rental-service/proto;rental";

message Rental {
  string id = 1;
  string user_id = 2;
  string car_id = 3;
  string type = 4; // normal / per_minute
  string start_time = 5;
  string end_time = 6;
  double total_price = 7;
}

message CreateRentalRequest {
  string user_id = 1;
  string car_id = 2;
  string type = 3; // normal / per_minute
}

message EndRentalRequest {
  string id = 1;
}

message GetRentalRequest {
  string id = 1;
}

message RentalList {
  repeated Rental rentals = 1;
}

message RentalIdRequest {
  string id = 1;
}

message UpdateTypeRequest {
  string id = 1;
  string type = 2;
}

message UserIdRequest {
  string user_id = 1;
}

message CarIdRequest {
  string car_id = 1;
}

message Empty {}

service RentalService {
  rpc CreateRental(CreateRentalRequest) returns (Rental);
  rpc EndRental(EndRentalRequest) returns (Rental);
  rpc GetRental(GetRentalRequest) returns (Rental);
  rpc ListRentals(Empty) returns (RentalList);
  rpc ListByUser(UserIdRequest) returns (RentalList);
  rpc ListByCar(CarIdRequest) returns (RentalList);
  rpc GetActiveRentals(Empty) returns (RentalList);
  rpc DeleteRental(RentalIdRequest) returns (Empty);
  rpc UpdateType(UpdateTypeRequest) returns (Rental);
}
